syntax = "proto3";

option java_package = "com.example.coffe1706.data.shoppingcart.dto";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME;

message ShoppingCartsDto {
    map<string, ShoppingCartDto> carts = 1;
}

message ShoppingCartDto {
    string locationId = 1;
    map<int64, uint32> items = 2;
}
